--- a/package.json
+++ b/package.json
@@ -1,19 +1,4 @@
 {
-  "name": "paraflow-whisper-api",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "form-data": "^4.0.0",
-    "node-fetch": "^2.7.0",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5"
-  },
-  "engines": {
-    "node": ">=14.0.0"
-  }
+  "name": "paraflow-backend",
+  "version": "1.0.0"
 }
